--- a/NLP2/Lab01/02 using pyTorch RNNs.ipynb
+++ b/NLP2/Lab01/02 using pyTorch RNNs.ipynb
@@ -29,7 +29,43 @@
     "\n",
     "from tqdm.auto import tqdm\n",
     "from collections import OrderedDict, Counter\n",
-    "import copy"
+    "import copy\n",
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "from IPython.display import Markdown, display"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4f816322",
+   "metadata": {},
+   "source": [
+    "# Using pyTorch implementation\n",
+    "\n",
+    "In this second part, we use pyTorch's implementation of RNNs and LSTMs. Again, as we are focusing on understanding the model and library, we will keep using the IMDB dataset. The good news is training is much faster using pyTorch's implementations."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "98bdb572",
+   "metadata": {},
+   "source": [
+    "## From dataset to batch inputs\n",
+    "\n",
+    "You already know what to do here, it's the same as in the previous notebook."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c5f932e7",
+   "metadata": {},
+   "source": [
+    "Reimplementing the vocabulary, data, generator and other methods to use pytorch RNN"
    ]
   },
   {
@@ -140,6 +176,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "893c5678",
+   "metadata": {},
+   "source": [
+    "Here the generator pads to the left, the reason being described in the first notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "6fff2cef",
@@ -179,8 +224,6 @@
     "        X_batch = X[i * batch_size : (i + 1) * batch_size]\n",
     "        y_batch = y[i * batch_size : (i + 1) * batch_size]\n",
     "        max_len = max([len(x) for x in X_batch])\n",
-    "        #print(max_len)\n",
-    "        #print(X_batch[0])\n",
     "        X_batch = torch.stack(\n",
     "            [torch.cat((torch.tensor([pad_id] * (max_len - len(x)), dtype=int), x)) for x in X_batch],\n",
     "        )\n",
@@ -188,9 +231,7 @@
     "\n",
     "train_gen = lambda: data_generator(X_train, y_train, vocabulary[pad_token])\n",
     "valid_gen = lambda: data_generator(X_valid, y_valid, vocabulary[pad_token])\n",
-    "test_gen = lambda: data_generator(X_test, y_test, vocabulary[pad_token])\n",
-    "\n",
-    "print(next(train_gen()))"
+    "test_gen = lambda: data_generator(X_test, y_test, vocabulary[pad_token])"
    ]
   },
   {
@@ -216,25 +257,26 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "97cf9568-cd60-4dc6-aaa8-096ee6e0156e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "354f08ce",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Using pyTorch implementation\n",
-    "\n",
-    "In this second part, we use pyTorch's implementation of RNNs and LSTMs. Again, as we are focusing on understanding the model and library, we will keep using the IMDB dataset. The good news is training is much faster using pyTorch's implementations."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9bcc80f0-e4e1-4ba3-bbda-582167fb43dc",
-   "metadata": {},
-   "source": [
-    "## From dataset to batch inputs\n",
-    "\n",
-    "You already know what to do here, it's the same as in the previous notebook."
+    "# compute accuracy\n",
+    "def accuracy(y_pred: torch.Tensor, y_true: torch.Tensor) -> float:\n",
+    "    \"\"\"\n",
+    "    Compute the accuracy of a model.\n",
+    "    Args:\n",
+    "        y_pred: the predictions of the model.\n",
+    "        y_true: the true labels.\n",
+    "    Returns:\n",
+    "        The accuracy of the model.\n",
+    "    \"\"\"\n",
+    "    with torch.no_grad():\n",
+    "        y_pred = torch.sigmoid(y_pred)\n",
+    "        y_pred = torch.round(y_pred)\n",
+    "        return (y_pred == y_true).sum().item() / len(y_true)"
    ]
   },
   {
@@ -310,29 +352,6 @@
     "        out = self.fc(out)\n",
     "\n",
     "        return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "90e36df7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compute accuracy\n",
-    "def accuracy(y_pred: torch.Tensor, y_true: torch.Tensor) -> float:\n",
-    "    \"\"\"\n",
-    "    Compute the accuracy of a model.\n",
-    "    Args:\n",
-    "        y_pred: the predictions of the model.\n",
-    "        y_true: the true labels.\n",
-    "    Returns:\n",
-    "        The accuracy of the model.\n",
-    "    \"\"\"\n",
-    "    with torch.no_grad():\n",
-    "        y_pred = torch.sigmoid(y_pred)\n",
-    "        y_pred = torch.round(y_pred)\n",
-    "        return (y_pred == y_true).sum().item() / len(y_true)\n"
    ]
   },
   {
@@ -1077,8 +1096,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "print(train_losses)\n",
     "plt.plot(train_losses, label=\"Training loss\")\n",
     "plt.plot(valid_losses, label=\"Validation loss\")\n",
     "plt.legend()"
@@ -1091,15 +1108,24 @@
    "metadata": {},
    "source": [
     "## Do the following (5 points)\n",
-    "* **\\[1 point\\]** Add an accuracy function and report the accuracy of the training, validation, and test set.\n",
-    "* **\\[2 points\\]** Create an LSTM class which uses an LSTM instead of an RNN. Compare its results with the RNN.\n",
+    "* **\\[1 point\\]** (1) Add an accuracy function and report the accuracy of the training, validation, and test set.\n",
+    "* **\\[2 points\\]** (2) Create an LSTM class which uses an LSTM instead of an RNN. Compare its results with the RNN.\n",
     "  * Look at the [LSTM documentation of pyTorch](https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html).\n",
-    "* **\\[1 point\\]** Implement a function which takes any text and returns the model's prediction.\n",
+    "* **\\[1 point\\]** (3) Implement a function which takes any text and returns the model's prediction.\n",
     "    * The function should have a string as input and return a class (0 or 1) and its confidence (between 0 and 1).\n",
-    "* **\\[Bonus\\]** Create a bidirectional LSTM (BiLSTM) class to classify your sentences. Report the accuracy on the training and test data.\n",
+    "* **\\[Bonus\\]** (4) Create a bidirectional LSTM (BiLSTM) class to classify your sentences. Report the accuracy on the training and test data.\n",
     "    * **Beware of the behaviour of the output layer.** For a bidirectional LSTM, the output layer concatenates the forward and backward vector of each token. But we need to use the forward output of the last token, and the backward output of the first token, as input to our output layer.\n",
-    "* **\\[1 point\\]** With your best classifier, look at two wrongly classified examples on the test set. Try explaining why the model was wrong.\n",
-    "* **\\[Bonus\\]** Try finding better hyperparameters (dimensions, number of layers, ...). Document your experiments and results."
+    "* **\\[1 point\\]** (5) With your best classifier, look at two wrongly classified examples on the test set. Try explaining why the model was wrong.\n",
+    "* **\\[Bonus\\]** (6) Try finding better hyperparameters (dimensions, number of layers, ...). Document your experiments and results."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e99f0be4",
+   "metadata": {},
+   "source": [
+    "(1) Accuracy function reporting the accuracy of training, validation and test set"
    ]
   },
   {
@@ -1128,7 +1154,7 @@
    ],
    "source": [
     "# print the test, train and validation accuracy\n",
-    "def test(model: nn.Module, test_gen: Callable) -> float:\n",
+    "def acc_func(model: nn.Module, test_gen: Callable) -> float:\n",
     "    \"\"\"Test a model.\n",
     "    Args:\n",
     "        model: a class inheriting from nn.Module.\n",
@@ -1147,9 +1173,18 @@
     "        test_acc = np.mean(test_acc_l)\n",
     "    return test_acc\n",
     "\n",
-    "print(f\"Test accuracy: {test(best_model, test_gen)}\")\n",
-    "print(f\"Train accuracy: {test(best_model, train_gen)}\")\n",
-    "print(f\"Valid accuracy: {test(best_model, valid_gen)}\")"
+    "print(f\"Test accuracy: {acc_func(best_model, test_gen)}\")\n",
+    "print(f\"Train accuracy: {acc_func(best_model, train_gen)}\")\n",
+    "print(f\"Valid accuracy: {acc_func(best_model, valid_gen)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6bd7a4b3",
+   "metadata": {},
+   "source": [
+    "(2) Our LSTM Class"
    ]
   },
   {
@@ -1159,7 +1194,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class lstm\n",
     "class LSTM(nn.Module):\n",
     "    \"\"\"A simple LSTM module with word embeddings.\"\"\"\n",
     "\n",
@@ -1215,8 +1249,7 @@
     "        # Linear projection.\n",
     "        out = self.fc(out)\n",
     "\n",
-    "        return out\n",
-    "    "
+    "        return out"
    ]
   },
   {
@@ -1854,7 +1887,6 @@
     }
    ],
    "source": [
-    "print(LSTM_train_losses)\n",
     "plt.plot(LSTM_train_losses, label=\"Training loss\")\n",
     "plt.plot(LSTM_valid_losses, label=\"Validation loss\")\n",
     "plt.legend()\n",
@@ -1886,9 +1918,18 @@
     }
    ],
    "source": [
-    "print(f\"Test accuracy: {test(LSTM_best_model, test_gen)}\")\n",
-    "print(f\"Train accuracy: {test(LSTM_best_model, train_gen)}\")\n",
-    "print(f\"Valid accuracy: {test(LSTM_best_model, valid_gen)}\")"
+    "print(f\"Test accuracy: {acc_func(LSTM_best_model, test_gen)}\")\n",
+    "print(f\"Train accuracy: {acc_func(LSTM_best_model, train_gen)}\")\n",
+    "print(f\"Valid accuracy: {acc_func(LSTM_best_model, valid_gen)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5e09b3dc",
+   "metadata": {},
+   "source": [
+    "Comparing results between RNN and LSTM :"
    ]
   },
   {
@@ -1913,20 +1954,16 @@
     }
    ],
    "source": [
-    "# compare the two models\n",
-    "# off warning\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "print(f\"RNN Test accuracy: {test(best_model, test_gen)}\")\n",
-    "print(f\"LSTM Test accuracy: {test(LSTM_best_model, test_gen)}\")\n",
+    "print(f\"RNN Test accuracy: {acc_func(best_model, test_gen)}\")\n",
+    "print(f\"LSTM Test accuracy: {acc_func(LSTM_best_model, test_gen)}\")\n",
     "print(\"\")\n",
     "\n",
-    "print(f\"RNN Train accuracy: {test(best_model, train_gen)}\")\n",
-    "print(f\"LSTM Train accuracy: {test(LSTM_best_model, train_gen)}\")\n",
+    "print(f\"RNN Train accuracy: {acc_func(best_model, train_gen)}\")\n",
+    "print(f\"LSTM Train accuracy: {acc_func(LSTM_best_model, train_gen)}\")\n",
     "print(\"\")\n",
     "\n",
-    "print(f\"RNN Valid accuracy: {test(best_model, valid_gen)}\")\n",
-    "print(f\"LSTM Valid accuracy: {test(LSTM_best_model, valid_gen)}\")\n"
+    "print(f\"RNN Valid accuracy: {acc_func(best_model, valid_gen)}\")\n",
+    "print(f\"LSTM Valid accuracy: {acc_func(LSTM_best_model, valid_gen)}\")"
    ]
   },
   {
@@ -1937,7 +1974,16 @@
    "source": [
     "Both models seems to overfit the data, LSTM does a way stronger overfit after a lot of epochs.\n",
     "\n",
-    "But overall LSTM has a better validation accuracy on it's best model"
+    "But overall LSTM has a better validation accuracy on it's best model than RNN."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e06b66db",
+   "metadata": {},
+   "source": [
+    "(3) Creating the function to predit from text :"
    ]
   },
   {
@@ -1967,8 +2013,25 @@
     "        y_pred = model(text)\n",
     "        y_pred = torch.sigmoid(y_pred)\n",
     "        y_pred = torch.round(y_pred)\n",
-    "        return y_pred.item()\n",
-    "    \n",
+    "        return y_pred.item()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bfb03c96",
+   "metadata": {},
+   "source": [
+    "Testing the predict functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a882e829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "str = \"This movie is bad\"\n",
     "print(\"RNN : \", str , predict(str, best_model))\n",
     "print(\"LSTM : \", str , predict(str, LSTM_best_model))\n",
@@ -1980,6 +2043,15 @@
     "str = \"This movie is not bad\"\n",
     "print(\"RNN : \", str , predict(str, best_model))\n",
     "print(\"LSTM : \", str , predict(str, LSTM_best_model))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5d32a7f4",
+   "metadata": {},
+   "source": [
+    "(5) Looking on LSTM at 2 wrong predictions with method :"
    ]
   },
   {
@@ -2002,9 +2074,6 @@
     }
    ],
    "source": [
-    "# with the best model\n",
-    "# manually print two wrong predictions from the test set\n",
-    "    \n",
     "def print_wrong_prediction(model, nb=2):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
@@ -2017,8 +2086,8 @@
     "            for i in range(len(y_pred)):\n",
     "                if y_pred[i] != y_batch[i]:\n",
     "                    print(\"Predicted : \", y_pred[i].item(), \"Actual : \", y_batch[i].item())\n",
-    "                    print(\"Text : \", test_df[\"text\"][i])\n",
-    "                    print(\"\")\n",
+    "                    print(\"Text : \")\n",
+    "                    display(Markdown(test_df[\"text\"][i]))\n",
     "                    nb -= 1\n",
     "                    if nb == 0:\n",
     "                        return\n",
