ready to submit

--- a/NLP2/Lab01/01 code your own RNN.ipynb
+++ b/NLP2/Lab01/01 code your own RNN.ipynb
@@ -34,7 +34,8 @@
     "from tqdm.auto import tqdm\n",
     "from collections import OrderedDict, Counter\n",
     "\n",
-    "import copy"
+    "import copy\n",
+    "\n"
    ]
   },
   {
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "42b598f9-36b5-43e3-bb25-488b0fb53aac",
    "metadata": {},
    "outputs": [
@@ -57,13 +58,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset imdb (/home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n"
+      "Found cached dataset imdb (/home/pierre/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd63e1798c0047bea9baeeca04a0b3a7",
+       "model_id": "901c3a6eddc64863ac3e565dd7541920",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached split indices for dataset at /home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
+      "Loading cached split indices for dataset at /home/pierre/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/pierre/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
      ]
     },
     {
@@ -87,7 +88,7 @@
        "((20000, 2), (5000, 2), (25000, 2))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "152b550c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f77c04e25cd48f78929d36cfb247c09",
+       "model_id": "4339e11726a940efb4190bd7e32dd98c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "e495aa0c",
    "metadata": {},
    "outputs": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "3f6fc4eb-2f25-43ee-8b2f-a9154545ebc6",
    "metadata": {},
    "outputs": [],
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "5040173f",
    "metadata": {},
    "outputs": [
@@ -239,7 +240,7 @@
        "tensor([  14,   10,    6, 2148])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "2a4a9058-ad04-43b9-bf5c-680afb44e35c",
    "metadata": {},
    "outputs": [],
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "9727204a-ecff-4e4d-a316-543865d52a31",
    "metadata": {},
    "outputs": [
@@ -280,7 +281,7 @@
        "tensor([  56, 3160,   13,  244,  526,   50,    3,    3,    3,    1])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "97eb948c-cfae-47b1-b8ce-bafa358afe65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dae103a2a26456199a0eb40d0189dd4",
+       "model_id": "0fa466206efb421884b76cd8a79b9aad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7a3331c50f046b7bc393010d4cda08b",
+       "model_id": "58e9261024bb434582af20248e8d1833",
        "version_major": 2,
        "version_minor": 0
       },
@@ -326,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b276887e8f084964aea8551c8b50a0ac",
+       "model_id": "f0071526371243a9a88267194c1de4b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "a88dd162-8107-4f05-bc8a-2fd313a3b8da",
    "metadata": {},
    "outputs": [],
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "c2e10342-4d6b-45c4-8e05-68ef6375b977",
    "metadata": {},
    "outputs": [],
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "4a0e7972",
    "metadata": {},
    "outputs": [],
@@ -514,17 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "0e9053b8-19f3-45b4-a434-2f8cef8a1f64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cpu'"
+       "'cuda:0'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "46cdc558-249b-4c26-b1e5-fc1c0a78d32d",
    "metadata": {},
    "outputs": [],
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "83345c69",
    "metadata": {},
    "outputs": [],
@@ -590,14 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "11753231",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc6fee9c51224b44bff15fda9a11b7d8",
+       "model_id": "1558374aaa30490b875d0c28fab70c25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,27 +610,93 @@
      "output_type": "display_data"
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 32\u001b[0m\n\u001b[1;32m     28\u001b[0m     loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m l\n\u001b[1;32m     31\u001b[0m \u001b[39m# 4. Compte gradients gradients\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     34\u001b[0m \u001b[39m# 5. Adjust learnable parameters\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[39m# clip as well to avoid vanishing and exploding gradients\u001b[39;00m\n\u001b[1;32m     36\u001b[0m nn\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mclip_grad_norm_(model\u001b[39m.\u001b[39mparameters(), \u001b[39m3\u001b[39m)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> epoch: 1, loss: 0.6956719160079956\n",
+      "=> epoch: 1, accuracy: 0.5016999840736389\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6483c6ce554948e284bbefc00eff807d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> epoch: 1, validation loss: 0.6936262845993042\n",
+      "=> epoch: 1, validation accuracy: 0.5052083134651184\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0852dbc666264a278914e41e1d7c5eb0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> epoch: 2, loss: 0.6933495402336121\n",
+      "=> epoch: 2, accuracy: 0.5040000081062317\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a644012c93ea41faa3605f36aaa6dbda",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> epoch: 2, validation loss: 0.6934377551078796\n",
+      "=> epoch: 2, validation accuracy: 0.49639421701431274\n"
      ]
     }
    ],
    "source": [
-    "n_epochs = 1\n",
+    "n_epochs = 2\n",
     "batch_size = 32\n",
     "train_losses = {}\n",
     "best_model = None\n",
     "accuracy_list = []\n",
+    "\n",
+    "best_train_acc = 0\n",
+    "best_valid_acc = 0\n",
+    "\n",
     "for epoch in range(n_epochs):\n",
     "    epoch_losses = list()\n",
+    "    accuracy_list = []\n",
     "    model.train()\n",
     "    for (X_batch, y_batch) in tqdm(train_gen()):\n",
     "        if X_batch.shape[0] != batch_size:\n",
@@ -660,8 +727,9 @@
     "        accuracy_list.append(accuracy(out, y_batch.reshape(X_batch.shape[0], 1).float()))\n",
     "\n",
     "    train_losses[epoch] = torch.tensor(epoch_losses).mean()\n",
+    "    train_acc = torch.tensor(accuracy_list).mean()\n",
     "    print(f'=> epoch: {epoch + 1}, loss: {train_losses[epoch]}')\n",
-    "    print(f'=> epoch: {epoch + 1}, accuracy: {torch.tensor(accuracy_list).mean()}')\n",
+    "    print(f'=> epoch: {epoch + 1}, accuracy: {train_acc}')\n",
     "\n",
     "    # compute validation loss, keep the best model\n",
     "    model.eval()\n",
@@ -684,38 +752,74 @@
     "            accuracy_list.append(accuracy(out, y_batch.reshape(X_batch.shape[0], 1).float()))\n",
     "\n",
     "        valid_loss = torch.tensor(valid_losses).mean()\n",
+    "        valid_acc = torch.tensor(accuracy_list).mean()\n",
     "        print(f'=> epoch: {epoch + 1}, validation loss: {valid_loss}')\n",
-    "        print(f'=> epoch: {epoch + 1}, validation accuracy: {torch.tensor(accuracy_list).mean()}')\n",
+    "        print(f'=> epoch: {epoch + 1}, validation accuracy: {valid_acc}')\n",
     "        if epoch == 0:\n",
     "            best_model = copy.deepcopy(model)\n",
+    "            best_train_acc = train_acc\n",
+    "            best_valid_acc = valid_acc\n",
     "        elif valid_loss < min(valid_losses):\n",
-    "            best_model = copy.deepcopy(model)"
+    "            best_model = copy.deepcopy(model)\n",
+    "            best_train_acc = train_acc\n",
+    "            best_valid_acc = valid_acc"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "ca3b06dd",
+   "id": "01f7d5ee",
    "metadata": {},
    "source": [
-    "Now let's test it"
+    "Our network does not learn and does no better than random, we do not know why but we suspect the error comes from either the training loop or the handmade model."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "137dc500-ece2-4efa-8207-758a5f428c26",
+   "metadata": {},
+   "source": [
+    "## Evaluation (1 point)\n",
+    "\n",
+    "* **\\[1 point\\]** Compute the accuracy for all 3 splits."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "695666de",
+   "metadata": {},
+   "source": [
+    "We compute the train and validation accuracy during the training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b237ae6e",
+   "execution_count": 35,
+   "id": "a4544dfd-7567-4bea-b484-490b6a7b74e4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'eval'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Test the model\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m best_model\u001b[39m.\u001b[39;49meval()\n\u001b[1;32m      3\u001b[0m accuracy_list \u001b[39m=\u001b[39m []\n\u001b[1;32m      4\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'eval'"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "addba8b64d494d1c83b43ceb0e01a517",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> test loss: 0.6933737397193909\n",
+      "=> test accuracy: 0.5113636255264282\n"
      ]
     }
    ],
@@ -723,6 +827,9 @@
     "# Test the model\n",
     "best_model.eval()\n",
     "accuracy_list = []\n",
+    "\n",
+    "test_accuracy = 0\n",
+    "\n",
     "with torch.no_grad():\n",
     "    test_losses = list()\n",
     "    for X_batch, y_batch in tqdm(test_gen()):\n",
@@ -743,64 +850,37 @@
     "        accuracy_list.append(accuracy(out, y_batch.reshape(X_batch.shape[0], 1).float()))\n",
     "\n",
     "    test_loss = torch.tensor(test_losses).mean()\n",
+    "    test_accuracy = torch.tensor(accuracy_list).mean()\n",
     "    print(f'=> test loss: {test_loss}')\n",
-    "    print(f'=> test accuracy: {torch.tensor(accuracy_list).mean()}')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "137dc500-ece2-4efa-8207-758a5f428c26",
-   "metadata": {},
-   "source": [
-    "## Evaluation (1 point)\n",
-    "\n",
-    "* **\\[1 point\\]** Compute the accuracy for all 3 splits."
+    "    print(f'=> test accuracy: {test_accuracy}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4544dfd-7567-4bea-b484-490b6a7b74e4",
+   "execution_count": 36,
+   "id": "f2e62ee9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=> test accuracy: nan\n"
+      "Best model train accuracy: 0.5016999840736389\n",
+      "Best model validation accuracy: 0.5052083134651184\n",
+      "Best model test accuracy: 0.5113636255264282\n"
      ]
     }
    ],
    "source": [
-    "# Evaluation\n",
-    "best_model.eval()\n",
-    "with torch.no_grad():\n",
-    "    test_accuracies = list()\n",
-    "    for X_batch, y_batch in test_gen():\n",
-    "        if X_batch.shape[0] != batch_size:\n",
-    "            continue\n",
-    "        hidden = best_model.init_hidden(X_batch.size(0))\n",
-    "        X_batch = X_batch.to(device)\n",
-    "        y_batch = y_batch.to(device)\n",
-    "        hidden = hidden.to(device)\n",
-    "\n",
-    "        loss = 0\n",
-    "        for c in range(X_batch.shape[1]):\n",
-    "            out, hidden = best_model(X_batch[:, c].reshape(X_batch.shape[0], 1).float(), hidden)\n",
-    "            l = criterion(out, y_batch.reshape(X_batch.shape[0], 1).float())\n",
-    "            loss += l\n",
-    "\n",
-    "        test_accuracies.append(accuracy(out, y_batch.reshape(X_batch.shape[0], 1).float()))\n",
-    "\n",
-    "    test_accuracy = torch.tensor(test_accuracies).mean()\n",
-    "    print(f'=> test accuracy: {test_accuracy}')"
+    "print(f'Best model train accuracy: {best_train_acc}')\n",
+    "print(f'Best model validation accuracy: {best_valid_acc}')\n",
+    "print(f'Best model test accuracy: {test_accuracy}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scia",
    "language": "python",
    "name": "python3"
   },
@@ -814,7 +894,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ea9312fc9c2d6329322094b403542e3a8436f2615ce450c7872cc3a27bdb75bb"
+   }
   }
  },
  "nbformat": 4,
